# horn-simulation

./: .gitignore  Dockerfile  Dockerfile.freecad  Dockerfile.solver  Makefile  README.md  docker-compose.yml  init.sql  justfile  main.nf  nextflow.config  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: drivers.json
docs/: A Comprehensive Design Document for an Open-Source, Cloud-Deployable Horn Loudspeaker Simulation and Optimization Pipeline.md  Conical Horn SPL Verification_.md  GEOMETRY_KERNEL_EVALUATION.md  Loudspeaker Driver Data Collection_.md  PROJECT_OVERVIEW.md  Revised Horn Simulation Pipeline Architecture.md  orchestration_plan.md
docs/challenges/: 01-complex-helmholtz-jit-failure.md  02-bem-solver-environment-setup-challenges.md  BEM Solver Environment Setup Analysis_.md  Complex Helmholtz FFCx Compile Failure_.md
scripts/: run_analysis.py  scrape_drivers.py  validate_drivers.py
src/horn/: main.py
tests/: broken.nf.test  main.nf.test  main.nf.test.snap  simulation.nf.test  test_e2e.py
tests/analysis/: test_analyzer.py
todo/: 01-project-setup-and-database.md  02-geometry-generation.md  03-simulation.md  04-analysis-and-visualization.md  05-implement-geometry-logic.md  06-implement-meshing-logic.md  07-implement-solver-and-geometry-logic.md  08-debugging-solver-environment.md  09-implement-basic-fem-solver.md  10-debugging-complex-solver.md  11-implement-procedural-geometry.md  12-frequency-sweep-and-plotting.md  13-implement-bem-solver.md  14-bem-solver-implementation.md  15-expand-horn-geometries.md
(+1908 files in other folders)
